# csm-sim

./: CMakeLists.txt  README.md  package.xml
config/: ros_gz_bridge.yaml
description/: lance.urdf  lance_import.urdf
description/lance/: model.sdf
description/lance/meshes/: lance-2024-body-tags.dae  lance-2024-collection.dae  lance-2024-frame-collision.stl  lance-2024-frame-push-plate.dae  lance-2024-frame.dae  lance-2024-hopper.dae  lance-2024-left-track-collision.stl  lance-2024-left-track.dae  lance-2024-multiscan.dae  lance-2024-right-track-collision.stl  lance-2024-right-track.dae  lance-2024-upper-collision.stl
gz-worlds/: artemis_arena_import.urdf
gz-worlds/meshes/: .gitattributes  artemis-arena-collision.stl  artemis-arena-dummy-surface.dae  artemis-arena-env.dae  artemis-arena-starting-zone-2.dae  artemis-arena-starting-zone-collision.stl  artemis-arena-starting-zone.dae  artemis-arena.dae  lunar-terrain.dae  lunar-terrain.stl  rock1.dae  rock2.dae  rock3.dae  rock4.dae  rock5.dae  rock6.dae  terrain.dae
launch/: foxglove.launch.py  gz_demo.launch.py  gz_sim.launch.py  isaac_sim.launch.py  robot_state_publisher.launch.py  xbox_ctrl.launch.py
scripts/: isaac_sim.py
